# roadrunner-flightmode-reliability

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  LICENSE  NominalFlight_noRudder.csv  README.md  SESSION_KNOWLEDGE.md  V_AND_V_REPORT.md  config.yaml  gui_test.py  launch_sim.bat  main.py  opencode.json  pyproject.toml  requirements-lock.txt  requirements.txt  run_sim.py  sim_config.yaml  start.bat  start_web.bat  start_web_sitl.bat  test_gui_live.py  test_permutation_results.json  test_permutations.py  test_sitl.py  version.py  ws_server.py
archive/desktop_gui/: README.md  run_sim.py
c:\Anduril\RoadRunner Flight Mode IBIT\logs/errors/: error_log.jsonl
docs/: ARCHITECTURE.md  SESSION_KNOWLEDGE.md  TEST_FLOW.md
hardware/: __init__.py  daq.py
rr_test/: __init__.py
rr_test/execution/: base_executor.py  debug_connection.py  diagnostics.py  error_logger.py  ibit_executor.py  logger.py  playback_executor.py  recovery.py  tracker.py  watchdog.py
rr_test/hardware/: daq.py
rr_test/server/: __init__.py  __main__.py  app_state.py  broadcaster.py  callbacks.py  handlers.py  server.py
rr_test/sim/: clock.py  fuzzer.py  recorder.py
rr_test/vehicle/: connection.py  preparation.py
scripts/: capture_screenshots.bat  capture_screenshots.py  install.bat  install.sh  upload_screenshots.py
sim/: __init__.py  bridge.py  fleet.py  mock_daq.py  sim_config.yaml  telemetry.py  vehicle.py
sim/config/: __init__.py  defaults.py  scenarios.py
sim/models/: __init__.py  battery.py  (+3 more)
test/: executor.py  logger.py
testing/: __init__.py  base_executor.py  callbacks.py  debug_connection.py  error_logger.py  executor.py  helpers.py  ibit_executor.py  logger.py  playback_executor.py  tracker.py  watchdog.py
tests/: README.md  conftest.py  debug_then_batch_6uuts.py  debug_then_batch_walkthrough.py  functional_test.py  new_user_walkthrough.py  permutation_test.py  playback_walkthrough.py  soak_test_24h.py  test_gui_live.py  test_permutations.py  test_sitl.py  test_web_gui_e2e.py  ui_interaction_test.py  web_e2e_test.py
tools/: click_start.py  gui_verify.py  operator_test.py
ui/: __init__.py  command_server.py  main_window.py  qt_adapter.py  theme.py  widgets.py
vehicle/: __init__.py  connection.py  constants.py  preparation.py
web/: electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
(+91 files in other folders)
